Install GO in Ubuntu to get rid of the multi-stage Dockerfile.

--- a/docker/user/Dockerfile
+++ b/docker/user/Dockerfile
@@ -1,11 +1,3 @@
-FROM golang:1.7
-
-COPY . /go/src/github.com/microservices-demo/user/
-WORKDIR /go/src/github.com/microservices-demo/user/
-
-RUN go get -v github.com/Masterminds/glide 
-RUN glide install && go build -a -ldflags -linkmode=external -installsuffix cgo -o /user main.go
-
 FROM ubuntu:16.04
 
 ENV	SERVICE_USER=myuser \
@@ -17,6 +9,22 @@ RUN addgroup --gid ${SERVICE_GID} ${SERVICE_GROUP} && adduser --ingroup ${SERVIC
 
 RUN apt-get update
 RUN apt-get install -y ca-certificates
+
+# Install GO
+RUN apt-get update -y && apt-get install --no-install-recommends -y -q curl build-essential ca-certificates git mercurial bzr
+RUN mkdir /go && curl https://storage.googleapis.com/golang/go1.7.3.linux-amd64.tar.gz | tar xvzf - -C /go --strip-components=1
+RUN mkdir /gopath
+
+ENV GOROOT /go
+ENV GOPATH /gopath
+ENV PATH $PATH:$GOROOT/bin:$GOPATH/bin
+
+# Build app
+COPY . /go/src/github.com/microservices-demo/user/
+WORKDIR /go/src/github.com/microservices-demo/user/
+
+RUN go get -v github.com/Masterminds/glide 
+RUN glide install && go build -a -ldflags -linkmode=external -installsuffix cgo -o /user main.go
 
 ENV HATEAOS user
 ENV USER_DATABASE mongodb
