Update of manifest to contain env variables.

--- a/manifest.yml
+++ b/manifest.yml
@@ -5,3 +5,8 @@ applications:
   instances: 1
   docker:
     image: DOCKER-HUB-ACCOUNT/user
+  env:
+    DT_NODE_ID: APPNAME
+    DT_CUSTOM_PROP: DEPLOYMENT_GRP_NAME=DTGRP DEPLOYMENT_COLOR=APPCOLOR
+    DEPLOYMENT_GRP_NAME: DTGRP
+    DUMMY_VAR: changethisagain2
