--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -98,15 +98,12 @@ jobs:
       tenanthost: ((tenanthost))
       APP_REPO: git-user
 
-
-
-
 # USER
 
 - name: build-user
   plan:
   - get: git-user
-    trigger: false
+    trigger: true
   - task: copy-dockerfile
     config:
       platform: linux
