--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -7,10 +7,11 @@ groups:
   - build-user-test-image
   - deploy-user-to-stage
   - execute-user-functional-tests
-  - deploy-user-to-prod
-  - execute-user-load-tests
-  - validate-user-load-test
-  - promote-new-version-user
+  # - deploy-user-to-prod
+  # - execute-user-load-tests
+  # - validate-user-load-test
+  # - promote-new-version-user
+  - upload-users-git-release
 
 - name: init-dynatrace
   jobs: 
@@ -22,8 +23,15 @@ resource_types:
   source:
     repository: mvilliger/dynatrace-resource
 
-
 resources:
+
+#GitHub Release Repository
+- name: user-release
+  type: github-release
+  source:
+    owner: acm-workshop-concourse
+    repository: user
+    access_token: ((github-access-token))
 
 # GitHub Repositories
 - name: git-pipeline
@@ -71,15 +79,15 @@ resources:
     space: ((pcf-stage-space))
     skip_cert_check: false
 
-- name: pcf-production
-  type: cf
-  source:
-    api: ((pcf-prod-api))
-    username: ((pcf-prod-deploy-username))
-    password: ((pcf-prod-deploy-password))
-    organization: ((pcf-prod-organization))
-    space: ((pcf-prod-space))
-    skip_cert_check: false
+# - name: pcf-production
+#   type: cf
+#   source:
+#     api: ((pcf-prod-api))
+#     username: ((pcf-prod-deploy-username))
+#     password: ((pcf-prod-deploy-password))
+#     organization: ((pcf-prod-organization))
+#     space: ((pcf-prod-space))
+#     skip_cert_check: false
 
 jobs:
 
@@ -193,136 +201,160 @@ jobs:
         - |
           go test api/endpoints_test.go
 
-- name: deploy-user-to-prod
-  serial: true
-  public: true
-  plan:
-  - get: git-user
-    trigger: true
-    passed:
-      - execute-user-functional-tests 
-  - get: git-pipeline
-    trigger: false
-  - task: get-current-app-color
-    file: git-pipeline/deploy/cloud-foundry/ci/tasks/current-app-get-info.yml
-    params:
-      PCF_APP_SUFFIX: ((pcf-prod-user-suffix))
-      PCF_API: ((pcf-prod-api))
-      PCF_ORG: ((pcf-prod-organization))
-      PCF_USER: ((pcf-prod-deploy-username))
-      PCF_PWD: ((pcf-prod-deploy-password))
-      PCF_SPACE: ((pcf-prod-space))              
-  - task: prepare-app-manifest
-    file: git-pipeline/deploy/cloud-foundry/ci/tasks/app-manifest-prep.yml
-    params:
-      PCF_APP_SUFFIX: ((pcf-prod-user-suffix)) 
-      DOCKER_HUB_ACCOUNT: ((docker-hub-username))
-      APP_REPO: git-user
-      PRODUCTION: true       
-  - put: dynatrace
-    params:
-      monspecserviceenvironment: user/Production
-      pipelinetaskname: deploy-user-to-prod
-      deployversion: v1.0 
-      APP_REPO: git-user      
-  - put: pcf-production
-    params:
-        manifest: app-manifest-output/manifest.yml 
 
-- name: execute-user-load-tests
-  serial: true
+
+# - name: deploy-user-to-prod
+#   serial: true
+#   public: true
+#   plan:
+#   - get: git-user
+#     trigger: true
+#     passed:
+#       - execute-user-functional-tests 
+#   - get: git-pipeline
+#     trigger: false
+#   - task: get-current-app-color
+#     file: git-pipeline/deploy/cloud-foundry/ci/tasks/current-app-get-info.yml
+#     params:
+#       PCF_APP_SUFFIX: ((pcf-prod-user-suffix))
+#       PCF_API: ((pcf-prod-api))
+#       PCF_ORG: ((pcf-prod-organization))
+#       PCF_USER: ((pcf-prod-deploy-username))
+#       PCF_PWD: ((pcf-prod-deploy-password))
+#       PCF_SPACE: ((pcf-prod-space))              
+#   - task: prepare-app-manifest
+#     file: git-pipeline/deploy/cloud-foundry/ci/tasks/app-manifest-prep.yml
+#     params:
+#       PCF_APP_SUFFIX: ((pcf-prod-user-suffix)) 
+#       DOCKER_HUB_ACCOUNT: ((docker-hub-username))
+#       APP_REPO: git-user
+#       PRODUCTION: true       
+#   - put: dynatrace
+#     params:
+#       monspecserviceenvironment: user/Production
+#       pipelinetaskname: deploy-user-to-prod
+#       deployversion: v1.0 
+#       APP_REPO: git-user      
+#   - put: pcf-production
+#     params:
+#         manifest: app-manifest-output/manifest.yml 
+
+# - name: execute-user-load-tests
+#   serial: true
+#   public: true
+#   plan:
+#   - aggregate:
+#     - get: git-user
+#       trigger: true
+#       passed:
+#         - deploy-user-to-prod
+#     - get: user-test-image
+#       passed:
+#         - build-user-test-image
+#     - get: git-pipeline
+#       trigger: false        
+#   - task: get-current-app-color
+#     file: git-pipeline/deploy/cloud-foundry/ci/tasks/current-app-get-info.yml
+#     params:
+#       PCF_APP_SUFFIX: ((pcf-prod-user-suffix))
+#       PCF_API: ((pcf-prod-api))
+#       PCF_ORG: ((pcf-prod-organization))
+#       PCF_USER: ((pcf-prod-deploy-username))
+#       PCF_PWD: ((pcf-prod-deploy-password))
+#       PCF_SPACE: ((pcf-prod-space))           
+#   - task: run-load-tests
+#     image: user-test-image
+#     file: git-pipeline/deploy/cloud-foundry/ci/tasks/load-tests.yml
+#     params:
+#       APP_REPO: git-user
+#       PRODUCTION: true
+#       PCF_APP_SUFFIX: ((pcf-prod-user-suffix))
+#       PCF_APP_DOMAIN: ((pcf-prod-app-domain))   
+#   - task: push-dynatrace-monspec-data
+#     file: git-pipeline/deploy/cloud-foundry/ci/tasks/push-dynatrace-monspec-data.yml
+#     params: 
+#       monspecserviceenvironment: user/Production-$NEXT_APP_COLOR
+#       apitoken: ((apitoken))
+#       tenanthost: ((tenanthost))
+#       APP_REPO: git-user   
+
+# - name: validate-user-load-test
+#   serial: true
+#   public: true
+#   plan:
+#   - get: git-user
+#     trigger: true
+#     passed:
+#       - execute-user-load-tests
+#   - get: git-pipeline
+#     trigger: false      
+#   - task: get-current-app-color
+#     file: git-pipeline/deploy/cloud-foundry/ci/tasks/current-app-get-info.yml
+#     params:
+#       PCF_APP_SUFFIX: ((pcf-prod-user-suffix))
+#       PCF_API: ((pcf-prod-api))
+#       PCF_ORG: ((pcf-prod-organization))
+#       PCF_USER: ((pcf-prod-deploy-username))
+#       PCF_PWD: ((pcf-prod-deploy-password))
+#       PCF_SPACE: ((pcf-prod-space))       
+#   - task: validate-via-monspec
+#     file: git-pipeline/deploy/cloud-foundry/ci/tasks/validate-via-monspec.yml
+#     params: 
+#       monspeccomparison: user/Production-$NEXT_APP_COLOR\ToProduction-$CURRENT_APP_COLOR\Last5m
+#       apitoken: ((apitoken))
+#       tenanthost: ((tenanthost))
+#       APP_REPO: git-user     
+
+
+# - name: promote-new-version-user
+#   serial: true
+#   public: true
+#   plan:
+#   - get: git-user
+#     trigger: true
+#     passed:
+#       - validate-user-load-test
+#   - get: git-pipeline
+#     trigger: false      
+#   - task: get-current-app-color
+#     file: git-pipeline/deploy/cloud-foundry/ci/tasks/current-app-get-info.yml
+#     params:
+#       PCF_APP_SUFFIX: ((pcf-prod-user-suffix))
+#       PCF_API: ((pcf-prod-api))
+#       PCF_ORG: ((pcf-prod-organization))
+#       PCF_USER: ((pcf-prod-deploy-username))
+#       PCF_PWD: ((pcf-prod-deploy-password))
+#       PCF_SPACE: ((pcf-prod-space))   
+#   - task: switch-app-routes
+#     file: git-pipeline/deploy/cloud-foundry/ci/tasks/update-routes.yml
+#     params:
+#       PCF_APP_SUFFIX: ((pcf-prod-user-suffix))
+#       PCF_API: ((pcf-prod-api))
+#       PCF_ORG: ((pcf-prod-organization))
+#       PCF_USER: ((pcf-prod-deploy-username))
+#       PCF_PWD: ((pcf-prod-deploy-password))
+#       PCF_SPACE: ((pcf-prod-space))
+#       PCF_APP_DOMAIN: ((pcf-prod-app-domain))              
+
+- name: upload-users-git-release
   public: true
   plan:
   - aggregate:
+    - get: git-pipeline
     - get: git-user
       trigger: true
-      passed:
-        - deploy-user-to-prod
-    - get: user-test-image
-      passed:
-        - build-user-test-image
-    - get: git-pipeline
-      trigger: false        
-  - task: get-current-app-color
-    file: git-pipeline/deploy/cloud-foundry/ci/tasks/current-app-get-info.yml
+      passed: 
+      - execute-user-functional-tests
+    - get: user-image
+  - task: create-user-release-tarball
+    image: user-image
+    file: git-pipeline/deploy/cloud-foundry/ci/tasks/prepare-release.yml
     params:
-      PCF_APP_SUFFIX: ((pcf-prod-user-suffix))
-      PCF_API: ((pcf-prod-api))
-      PCF_ORG: ((pcf-prod-organization))
-      PCF_USER: ((pcf-prod-deploy-username))
-      PCF_PWD: ((pcf-prod-deploy-password))
-      PCF_SPACE: ((pcf-prod-space))           
-  - task: run-load-tests
-    image: user-test-image
-    file: git-pipeline/deploy/cloud-foundry/ci/tasks/load-tests.yml
+      APP_REPO: git-user 
+  - put: user-release
     params:
-      APP_REPO: git-user
-      PRODUCTION: true
-      PCF_APP_SUFFIX: ((pcf-prod-user-suffix))
-      PCF_APP_DOMAIN: ((pcf-prod-app-domain))   
-  - task: push-dynatrace-monspec-data
-    file: git-pipeline/deploy/cloud-foundry/ci/tasks/push-dynatrace-monspec-data.yml
-    params: 
-      monspecserviceenvironment: user/Production-$NEXT_APP_COLOR
-      apitoken: ((apitoken))
-      tenanthost: ((tenanthost))
-      APP_REPO: git-user   
-
-- name: validate-user-load-test
-  serial: true
-  public: true
-  plan:
-  - get: git-user
-    trigger: true
-    passed:
-      - execute-user-load-tests
-  - get: git-pipeline
-    trigger: false      
-  - task: get-current-app-color
-    file: git-pipeline/deploy/cloud-foundry/ci/tasks/current-app-get-info.yml
-    params:
-      PCF_APP_SUFFIX: ((pcf-prod-user-suffix))
-      PCF_API: ((pcf-prod-api))
-      PCF_ORG: ((pcf-prod-organization))
-      PCF_USER: ((pcf-prod-deploy-username))
-      PCF_PWD: ((pcf-prod-deploy-password))
-      PCF_SPACE: ((pcf-prod-space))       
-  - task: validate-via-monspec
-    file: git-pipeline/deploy/cloud-foundry/ci/tasks/validate-via-monspec.yml
-    params: 
-      monspeccomparison: user/Production-$NEXT_APP_COLOR\ToProduction-$CURRENT_APP_COLOR\Last5m
-      apitoken: ((apitoken))
-      tenanthost: ((tenanthost))
-      APP_REPO: git-user     
-
-
-- name: promote-new-version-user
-  serial: true
-  public: true
-  plan:
-  - get: git-user
-    trigger: true
-    passed:
-      - validate-user-load-test
-  - get: git-pipeline
-    trigger: false      
-  - task: get-current-app-color
-    file: git-pipeline/deploy/cloud-foundry/ci/tasks/current-app-get-info.yml
-    params:
-      PCF_APP_SUFFIX: ((pcf-prod-user-suffix))
-      PCF_API: ((pcf-prod-api))
-      PCF_ORG: ((pcf-prod-organization))
-      PCF_USER: ((pcf-prod-deploy-username))
-      PCF_PWD: ((pcf-prod-deploy-password))
-      PCF_SPACE: ((pcf-prod-space))   
-  - task: switch-app-routes
-    file: git-pipeline/deploy/cloud-foundry/ci/tasks/update-routes.yml
-    params:
-      PCF_APP_SUFFIX: ((pcf-prod-user-suffix))
-      PCF_API: ((pcf-prod-api))
-      PCF_ORG: ((pcf-prod-organization))
-      PCF_USER: ((pcf-prod-deploy-username))
-      PCF_PWD: ((pcf-prod-deploy-password))
-      PCF_SPACE: ((pcf-prod-space))
-      PCF_APP_DOMAIN: ((pcf-prod-app-domain))              
-
+      name: prepared-release/name
+      tag: prepared-release/tag
+    #   body: path/to/body/file
+      globs:
+      - prepared-release/user*.tgz
