--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -1,12 +1,10 @@
 ---
 groups:
-
 - name: user-jobs
   jobs:
   - build-user
-  - build-user-test-image
   - deploy-user-to-stage
-  - execute-user-functional-tests
+  - health-check
   - deploy-user-to-prod
   - execute-user-load-tests
   - validate-user-load-test
@@ -22,15 +20,19 @@ resource_types:
   source:
     repository: mvilliger/dynatrace-resource
 
-
 resources:
 
-# GitHub Repositories
 - name: git-pipeline
   type: git
   source:
     branch: master
     uri: https://github.com/acm-workshop/sockshop.git
+
+- name: git-jmeter-as-container
+  type: git
+  source:
+    branch: master
+    uri: https://github.com/acm-workshop/jmeter-as-container.git
 
 - name: git-user
   type: git
@@ -43,19 +45,11 @@ resources:
   source:
     apitoken: ((apitoken))
     tenanthost: ((tenanthost))
-# Docker Images
 
 - name: user-image
   type: docker-image
   source:
     repository: ((docker-hub-username))/user
-    username: ((docker-hub-username))
-    password: ((docker-hub-password))
-
-- name: user-test-image
-  type: docker-image
-  source:
-    repository: ((docker-hub-username))/user-test
     username: ((docker-hub-username))
     password: ((docker-hub-password))
 
@@ -128,19 +122,6 @@ jobs:
       build: workspace
       cache_tag: latest
 
-- name: build-user-test-image
-  serial: true
-  public: true
-  plan:
-  - get: git-user
-    trigger: true
-    passed: 
-    - build-user
-  - put: user-test-image
-    params:
-      build: git-user
-      cache_tag: latest
-
 - name: deploy-user-to-stage
   serial: true
   public: true
@@ -167,7 +148,7 @@ jobs:
     params:
       manifest: app-manifest-output/manifest.yml  
   
-- name: execute-user-functional-tests
+- name: health-check
   serial: true
   public: true
   plan:
@@ -176,22 +157,20 @@ jobs:
       trigger: true
       passed:
         - deploy-user-to-stage
-    - get: user-test-image
-      passed:
-        - build-user-test-image
-  - task: run-functional-tests
-    image: user-test-image
-    config:
-      platform: linux
-      inputs:
-      - name: git-user
-      run:
-        dir: git-user
-        path: /bin/sh
-        args:
-        - -c
-        - |
-          go test api/endpoints_test.go
+    - get: git-jmeter-as-container
+    - get: git-pipeline
+  - task: run-load-tests
+    file: git-pipeline/deploy/cloud-foundry/ci/tasks/health-test.yml
+    params:
+      APP_REPO: git-jmeter-as-container
+      FUNC_VALIDATION: yes
+      PRODUCTION: false
+      SCRIPT_NAME: basiccheck.jmx
+      PCF_APP_SUFFIX: ((pcf-stage-user-suffix))
+      PCF_APP_DOMAIN: ((pcf-prod-app-domain))
+      DT_LTN: HealthCheck
+      VUCount: 1
+      LoopCount: 1
 
 - name: deploy-user-to-prod
   serial: true
@@ -200,7 +179,7 @@ jobs:
   - get: git-user
     trigger: true
     passed:
-      - execute-user-functional-tests 
+      - health-check
   - get: git-pipeline
     trigger: false
   - task: get-current-app-color
@@ -238,11 +217,7 @@ jobs:
       trigger: true
       passed:
         - deploy-user-to-prod
-    - get: user-test-image
-      passed:
-        - build-user-test-image
-    - get: git-pipeline
-      trigger: false        
+    - get: git-pipeline       
   - task: get-current-app-color
     file: git-pipeline/deploy/cloud-foundry/ci/tasks/current-app-get-info.yml
     params:
@@ -294,7 +269,6 @@ jobs:
       apitoken: ((apitoken))
       tenanthost: ((tenanthost))
       APP_REPO: git-user     
-
 
 - name: promote-new-version-user
   serial: true
