--- a/manifest.yml
+++ b/manifest.yml
@@ -3,6 +3,7 @@ applications:
 - name: APPNAME
   memory: 512M
   instances: 1
+  command: user-0.0.2
   env:
     DT_NODE_ID: APPNAME
     DT_CUSTOM_PROP: DEPLOYMENT_GRP_NME=DTGRP DEPLOYMENT_COLOR=APPCOLOR
