--- a/manifest.yml
+++ b/manifest.yml
@@ -6,6 +6,8 @@ applications:
   buildpack: https://github.com/cloudfoundry/go-buildpack.git
   command: user-0.0.2
   env:
+    GOVERSION: go1.7
+    GOPACKAGENAME: example.com/user/app-package-name
     DT_NODE_ID: APPNAME
     DT_CUSTOM_PROP: DEPLOYMENT_GRP_NME=DTGRP DEPLOYMENT_COLOR=APPCOLOR
     DEPLOYMENT_GRP_NME: DTGRP
