--- a/manifest.yml
+++ b/manifest.yml
@@ -7,6 +7,7 @@ applications:
   command: user-0.0.2
   env:
     GOVERSION: go1.7
+    GOPACKAGENAME: github.com/dynatrace-sockshop/user
     DT_NODE_ID: APPNAME
     DT_CUSTOM_PROP: DEPLOYMENT_GRP_NME=DTGRP DEPLOYMENT_COLOR=APPCOLOR
     DEPLOYMENT_GRP_NME: DTGRP
