update of manifest.

--- a/manifest.yml
+++ b/manifest.yml
@@ -3,9 +3,10 @@ applications:
 - name: APPNAME
   memory: 512M
   instances: 1
-  buildpack: go_buildpack
+  #buildpack: https://github.com/cloudfoundry/go-buildpack.git
   command: user-0.0.2
   env:
+    #GOPACKAGENAME : APPNAME
     DT_NODE_ID: APPNAME
     DT_CUSTOM_PROP: DEPLOYMENT_GRP_NME=DTGRP DEPLOYMENT_COLOR=APPCOLOR
     DEPLOYMENT_GRP_NME: DTGRP
