--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -178,11 +178,11 @@ jobs:
   plan:
   - get: git-user
     trigger: true
-    #passed:
-    #  - build-user
-  - get: user-release-bucket
-    #passed:
-    #  - build-user
+#    passed:
+#      - build-user
+#  - get: user-release-bucket
+#    passed:
+#      - build-user
   - get: git-pipeline
     trigger: false      
   - task: prepare-app-manifest
@@ -199,7 +199,7 @@ jobs:
       APP_REPO: git-user
   - put: pcf-stage
     params:
-      path: user-release-bucket
+      path: git-user
       manifest: app-manifest-output/manifest.yml  
   
 - name: health-check
