--- a/manifest.yml
+++ b/manifest.yml
@@ -6,7 +6,7 @@ applications:
   buildpack: https://github.com/cloudfoundry/go-buildpack.git
   env:
     GOPACKAGENAME : APPNAME
-    PORT: 8080
+    APP_PORT: 8080
     USER_DATABASE: mongodb
     MONGO_URI: mongodb://user-db-user:user-db4SockShop@user-db-shard-00-00-vvczq.mongodb.net:27017,user-db-shard-00-01-vvczq.mongodb.net:27017,user-db-shard-00-02-vvczq.mongodb.net:27017/test?ssl=true&replicaSet=user-db-shard-0&authSource=admin
     DT_NODE_ID: APPNAME
