--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -178,11 +178,11 @@ jobs:
   plan:
   - get: git-user
     trigger: true
-#    passed:
-#      - build-user
-#  - get: user-release-bucket
-#    passed:
-#      - build-user
+    passed:
+      - build-user
+  - get: user-release-bucket
+    passed:
+      - build-user
   - get: git-pipeline
     trigger: false      
   - task: prepare-app-manifest
@@ -257,10 +257,11 @@ jobs:
       monspecserviceenvironment: user/Production
       pipelinetaskname: deploy-user-to-prod
       deployversion: v1.0 
-      APP_REPO: git-user      
+      APP_REPO: git-user
   - put: pcf-production
     params:
-        manifest: app-manifest-output/manifest.yml 
+      path: git-user
+      manifest: app-manifest-output/manifest.yml
 
 - name: execute-user-load-tests
   serial: true
