--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -58,26 +58,26 @@ resources:
 - name: user-release-bucket
   type: s3
   source:
-#    region_name: eu-west-1
-#    regexp: user/user-(.*)
-#    bucket: ((s3-bucket))
-#    access_key_id: ((s3-access-key-id))
-#    secret_access_key: ((s3-secret-access-key))
-    driver: git
-    uri: https://github.com/((workshop-repository))/user.git
-    branch: master
-    file: version
+    region_name: eu-west-1
+    regexp: user/user-(.*)
+    bucket: ((s3-bucket))
+    access_key_id: ((s3-access-key-id))
+    secret_access_key: ((s3-secret-access-key))
 
 - name: version
   type: semver
   source:
-    driver: s3
-    initial_version: 0.0.1
-    region_name: eu-west-1
-    bucket: ((s3-bucket))
-    access_key_id: ((s3-access-key-id))
-    secret_access_key: ((s3-secret-access-key))
-    key: user/version
+#    driver: s3
+#    initial_version: 0.0.1
+#    region_name: eu-west-1
+#    bucket: ((s3-bucket))
+#    access_key_id: ((s3-access-key-id))
+#    secret_access_key: ((s3-secret-access-key))
+#    key: user/version
+    driver: git
+    uri: https://github.com/((workshop-repository))/user.git
+    branch: master
+    file: version
 
 # PCF Environments
 
@@ -266,6 +266,7 @@ jobs:
       trigger: true
       passed:
         - deploy-user-to-prod
+    - get: git-jmeter-as-container
     - get: git-pipeline       
   - task: get-current-app-color
     file: git-pipeline/deploy/cloud-foundry/ci/tasks/current-app-get-info.yml
@@ -276,13 +277,18 @@ jobs:
       PCF_USER: ((pcf-prod-deploy-username))
       PCF_PWD: ((pcf-prod-deploy-password))
       PCF_SPACE: ((pcf-prod-space))           
-  - task: run-load-tests
+  - task: run-load-test
     file: git-pipeline/deploy/cloud-foundry/ci/tasks/load-tests.yml
     params:
-      APP_REPO: git-user
+      APP_REPO: git-jmeter-as-container
+      FUNC_VALIDATION: yes
       PRODUCTION: true
+      SCRIPT_NAME: user_basic.jmx
       PCF_APP_SUFFIX: ((pcf-prod-user-suffix))
-      PCF_APP_DOMAIN: ((pcf-prod-app-domain))   
+      PCF_APP_DOMAIN: ((pcf-prod-app-domain))
+      DT_LTN: LoadTest
+      VUCount: 1
+      LoopCount: 10    
   - task: push-dynatrace-monspec-data
     file: git-pipeline/deploy/cloud-foundry/ci/tasks/push-dynatrace-monspec-data.yml
     params: 
