--- a/glide.yaml
+++ b/glide.yaml
@@ -20,6 +20,9 @@ import:
 - package: github.com/globalsign/mgo
   subpackages:
   - bson
+- package: gopkg.in/mgo.v2
+  subpackages:
+  - bson
 - package: github.com/afex/hystrix-go
   subpackages:
   - hystrix
