--- a/manifest/user.yml
+++ b/manifest/user.yml
@@ -15,6 +15,11 @@ spec:
       containers:
       - name: user
         image: to-be-replaced-by-jenkins
+        env: 
+        - name: DT_TAGS
+          value: "SERVICE_TYPE=BACKEND"
+        - name: DT_CUSTOM_PROP
+          value: "SERVICE_TYPE=BACKEND"
         resources:
           limits:
             cpu: 500m
