Change DT_TAG to product=sockshop.

--- a/manifest/user.yml
+++ b/manifest/user.yml
@@ -17,7 +17,7 @@ spec:
         image: to-be-replaced-by-jenkins
         env: 
         - name: DT_TAGS
-          value: "SERVICE_TYPE=BACKEND"
+          value: "product=sockshop"
         - name: DT_CUSTOM_PROP
           value: "SERVICE_TYPE=BACKEND"
         resources:
